@@ -1,4 +1,4 @@
-/* 
+	/* 
  * Copyright (C) 2001-2003 Jacek Sieka, j_s@telia.com
  *
  * This program is free software; you can redistribute it and/or modify
@@ -176,5 +176,5 @@ private:
 
 /**
  * @file
- * $Id: SearchManager.h,v 1.37 2004/03/24 20:22:13 arnetheduck Exp $
+ * $Id: SearchManager.h,v 1.38 2004/03/27 11:16:27 arnetheduck Exp $
  */
