@@ -27,10 +27,10 @@
 #include "../client/ClientManager.h"
 #include "../client/StringTokenizer.h"
 
-int FinishedFrame::columnIndexes[] = { COLUMN_DONE, COLUMN_FILE, COLUMN_PATH, COLUMN_NICK, COLUMN_SIZE, COLUMN_SPEED, COLUMN_CRC32 };
-int FinishedFrame::columnSizes[] = { 110, 100, 290, 125, 80, 80, 80 };
-static ResourceManager::Strings columnNames[] = { ResourceManager::TIME, ResourceManager::FILENAME, ResourceManager::PATH, 
-ResourceManager::NICK, ResourceManager::SIZE, ResourceManager::SPEED, ResourceManager::CRC_CHECKED
+int FinishedFrame::columnIndexes[] = { COLUMN_DONE, COLUMN_FILE, COLUMN_PATH, COLUMN_NICK, COLUMN_HUB, COLUMN_SIZE, COLUMN_SPEED, COLUMN_CRC32 };
+int FinishedFrame::columnSizes[] = { 100, 110, 290, 125, 80, 80, 80, 80 };
+static ResourceManager::Strings columnNames[] = { ResourceManager::FILENAME, ResourceManager::TIME, ResourceManager::PATH, 
+ResourceManager::NICK, ResourceManager::HUB, ResourceManager::SIZE, ResourceManager::SPEED, ResourceManager::CRC_CHECKED
 };
 
 LRESULT FinishedFrame::onCreate(UINT /*uMsg*/, WPARAM /*wParam*/, LPARAM /*lParam*/, BOOL& bHandled)
@@ -39,7 +39,7 @@ LRESULT FinishedFrame::onCreate(UINT /*uMsg*/, WPARAM /*wParam*/, LPARAM /*lPara
 	ctrlStatus.Attach(m_hWndStatusBar);
 	
 	ctrlList.Create(m_hWnd, rcDefault, NULL, WS_CHILD | WS_VISIBLE | WS_CLIPSIBLINGS | WS_CLIPCHILDREN | 
-		WS_HSCROLL | WS_VSCROLL | LVS_REPORT | LVS_SHOWSELALWAYS , WS_EX_CLIENTEDGE, IDC_FINISHED);
+		WS_HSCROLL | WS_VSCROLL | LVS_REPORT | LVS_SHOWSELALWAYS | LVS_SHAREIMAGELISTS, WS_EX_CLIENTEDGE, IDC_FINISHED);
 
 	if(BOOLSETTING(FULL_ROW_SELECT)) {
 		ctrlList.SetExtendedListViewStyle(LVS_EX_FULLROWSELECT | LVS_EX_HEADERDRAGDROP);
@@ -47,6 +47,7 @@ LRESULT FinishedFrame::onCreate(UINT /*uMsg*/, WPARAM /*wParam*/, LPARAM /*lPara
 		ctrlList.SetExtendedListViewStyle(LVS_EX_HEADERDRAGDROP);
 	}
 	
+	ctrlList.SetImageList(WinUtil::fileImages, LVSIL_SMALL);
 	ctrlList.SetBkColor(WinUtil::bgColor);
 	ctrlList.SetTextBkColor(WinUtil::bgColor);
 	ctrlList.SetTextColor(WinUtil::textColor);
@@ -193,22 +194,24 @@ void FinishedFrame::onAction(FinishedManagerListener::Types type, FinishedItem* 
 
 void FinishedFrame::addEntry(FinishedItem* entry) {
 	StringList l;
-	l.push_back(Util::formatTime("%Y-%m-%d %H:%M:%S", entry->getTime()));
 	l.push_back(Util::getFileName(entry->getTarget()));
-	l.push_back(Util::getFilePath(entry->getTarget()));	
-	l.push_back(entry->getUser() + " (" + entry->getHub() + ")");
+	l.push_back(Util::formatTime("%Y-%m-%d %H:%M:%S", entry->getTime()));
+	l.push_back(Util::getFilePath(entry->getTarget()));
+	l.push_back(entry->getUser());
+	l.push_back(entry->getHub());
 	l.push_back(Util::formatBytes(entry->getSize()));
 	l.push_back(Util::formatBytes(entry->getAvgSpeed()) + "/s");
 	l.push_back(entry->getCrc32Checked() ? STRING(YES) : STRING(NO));
 	totalBytes += entry->getChunkSize();
 	totalTime += entry->getMilliSeconds();
 
-	int loc = ctrlList.insert(l, 0, (LPARAM)entry);
+	int image = WinUtil::getIconIndex(entry->getTarget());
+	int loc = ctrlList.insert(l, image, (LPARAM)entry);
 	ctrlList.EnsureVisible(loc, FALSE);
 }
 
 
 /**
  * @file
- * $Id: FinishedFrame.cpp,v 1.18 2004/03/24 20:38:17 arnetheduck Exp $
+ * $Id: FinishedFrame.cpp,v 1.19 2004/03/27 11:16:27 arnetheduck Exp $
  */
