@@ -30,7 +30,7 @@
 
 #define SERVER_MESSAGE_MAP 7
 
-class FinishedULFrame : public MDITabChildWindowImpl<FinishedULFrame>, public StaticFrame<FinishedULFrame, ResourceManager::FINISHED_UPLOADS>, 
+class FinishedULFrame : public MDITabChildWindowImpl<FinishedULFrame>, public StaticFrame<FinishedULFrame, ResourceManager::FINISHED_UPLOADS>,
 	private FinishedManagerListener
 {
 public:
@@ -168,10 +168,11 @@ private:
 
 	enum {
 		COLUMN_FIRST,
-		COLUMN_DONE = COLUMN_FIRST,
-		COLUMN_FILE,
+		COLUMN_FILE = COLUMN_FIRST,
+		COLUMN_DONE,
 		COLUMN_PATH,
 		COLUMN_NICK,
+		COLUMN_HUB,
 		COLUMN_SIZE,
 		COLUMN_SPEED,
 		COLUMN_LAST
@@ -186,7 +187,7 @@ private:
 	int64_t totalTime;
 
 	bool closed;
-	
+
 	static int columnSizes[COLUMN_LAST];
 	static int columnIndexes[COLUMN_LAST];
 	
@@ -207,12 +208,12 @@ private:
 
 	void addEntry(FinishedItem* entry);
 	
-	virtual void onAction(FinishedManagerListener::Types type, FinishedItem* entry) throw();;
+	virtual void onAction(FinishedManagerListener::Types type, FinishedItem* entry) throw();
 };
 
 #endif // FINISHEDULFRAME_H
 
 /**
  * @file
- * $Id: FinishedULFrame.h,v 1.11 2003/11/14 15:37:36 arnetheduck Exp $
+ * $Id: FinishedULFrame.h,v 1.12 2004/03/27 11:16:27 arnetheduck Exp $
  */
