@@ -120,6 +120,10 @@ LRESULT MainFrame::OnCreate(UINT /*uMsg*/, WPARAM /*wParam*/, LPARAM /*lParam*/,
 	m_CmdBar.m_arrCommand.Add(ID_FILE_SETTINGS);
 	m_CmdBar.m_arrCommand.Add(IDC_NOTEPAD);
 	m_CmdBar.m_arrCommand.Add(IDC_NET_STATS);
+	m_CmdBar.m_arrCommand.Add(ID_WINDOW_CASCADE);
+	m_CmdBar.m_arrCommand.Add(ID_WINDOW_TILE_HORZ);
+	m_CmdBar.m_arrCommand.Add(ID_WINDOW_TILE_VERT);
+	m_CmdBar.m_arrCommand.Add(ID_WINDOW_MINIMIZE_ALL);
 	
 	// remove old menu
 	SetMenu(NULL);
@@ -976,5 +980,5 @@ void MainFrame::onAction(QueueManagerListener::Types type, QueueItem* qi) throw(
 
 /**
  * @file
- * $Id: MainFrm.cpp,v 1.49 2004/03/26 19:23:28 arnetheduck Exp $
+ * $Id: MainFrm.cpp,v 1.50 2004/03/27 11:16:27 arnetheduck Exp $
  */
