@@ -245,9 +245,8 @@
 #define IDC_SETTINGS_FORMAT2            1218
 #define IDC_SETTINGS_FORMAT3            1219
 #define IDC_SETTINGS_FORMAT4            1220
-#define IDC_SETTINGS_LOG_SYSTEM         1221
-#define IDC_LOG_SYSTEM                  1222
-#define IDC_SEARCH_BY_TTH				1223
+#define IDC_LOG_SYSTEM                  1221
+#define IDC_SEARCH_BY_TTH				1222
 #define IDC_BROWSELIST                  3000
 #define IDC_REMOVE_SOURCE               3500
 #define IDC_PM                          4000
@@ -283,7 +282,7 @@
 #define _APS_3D_CONTROLS                     1
 #define _APS_NEXT_RESOURCE_VALUE        238
 #define _APS_NEXT_COMMAND_VALUE         32788
-#define _APS_NEXT_CONTROL_VALUE         1222
+#define _APS_NEXT_CONTROL_VALUE         1223
 #define _APS_NEXT_SYMED_VALUE           104
 #endif
 #endif
